<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:id="@+id/parentCell"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/circleCumplimiento"
        android:scaleType="centerCrop"
        android:layout_marginLeft="23dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="23dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/default_text_da"
        android:id="@+id/kw_view"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_above="@+id/ps_view"
        android:layout_alignLeft="@+id/circleCumplimiento"
        android:layout_alignStart="@+id/circleCumplimiento" />

    <TextView
        android:id="@+id/txtFechaInicial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/separator"
        android:textSize="30sp"
        android:textColor="@android:color/secondary_text_dark"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/kw_view"
        android:layout_toEndOf="@+id/kw_view"
        android:layout_marginTop="5dp" />

    <TextView
        android:id="@+id/ps_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/default_text_td"
        android:layout_alignBottom="@+id/txtFechaInicial"
        android:layout_toRightOf="@+id/txtFechaInicial"
        android:layout_toEndOf="@+id/txtFechaInicial" />



</RelativeLayout>
