<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    android:id="@+id/coordinatorProgresoFlujo"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:fitsSystemWindows="true"
    tools:context="com.gruporosul.workflow.activity.ProgresoFlujoActivity">

    <android.support.design.widget.AppBarLayout android:layout_height="wrap_content"
        android:layout_width="match_parent" android:theme="@style/MyMaterialTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar android:id="@+id/toolbar"
            android:layout_width="match_parent" android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/MyMaterialTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <include layout="@layout/content_progreso_flujo" />

    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/fabMenuFlujo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:menu_colorNormal="@color/colorAccent"
        app:menu_colorPressed="@color/colorAccent"
        app:menu_colorRipple="@color/colorAccent"
        android:layout_gravity="bottom|end">

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fabHistorico"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_historico"
            app:fab_colorNormal="@color/colorAccent"
            app:fab_colorPressed="@color/colorAccent"
            app:fab_colorRipple="@color/colorAccent"
            app:fab_label="@string/fab_historico"/>

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fabFinForzado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_fin_forzado"
            app:fab_colorNormal="@color/colorAccent"
            app:fab_colorPressed="@color/colorAccent"
            app:fab_colorRipple="@color/colorAccent"
            app:fab_label="@string/dialog_op_fin_forzado"/>

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fabSeguimiento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_seguimiento"
            app:fab_colorNormal="@color/colorAccent"
            app:fab_colorPressed="@color/colorAccent"
            app:fab_colorRipple="@color/colorAccent"
            app:fab_label="@string/fab_seguimiento"/>

    </com.github.clans.fab.FloatingActionMenu>

</android.support.design.widget.CoordinatorLayout>
